--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,21 +27,17 @@
           2 days ago
         </div>
       </div>
-      <h2>Leave a review!</h2>
-      <form action="">
+      <h2>Leave a Review</h2>
+      <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3">
+        <div class="mb-3">
+          <label class="form-label" for="rating">Rating</label>
+          <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+        </div>
         <div class="mb-3">
           <label class="form-label" for="body">Review</label>
           <textarea name="review[body]" id="body" cols="30" rows="3"></textarea>
         </div>
-        <div class="mb-3">
-          <label class="form-label" for="rating">Rating</label>
-          <select name="review[rating]" id="rating">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-          </select>
+        <button class="btn btn-success" type="submit">Submit</button>
       </form>
     </div>
   </div>
